[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Mouse/KinematicBody2D.gd" type="Script" id=2]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0.0163551, 0.52454 ), 0.0, 0.0, 0, 0, Vector2( 0.950935, 0.131902 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
spread = 1.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 20.0
scale_curve = SubResource( 2 )
color = Color( 0.905882, 0.839216, 0.0745098, 1 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="icon" type="Sprite" parent="."]
visible = false
rotation = -1.56906
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="TimerSpeed" type="Timer" parent="."]

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -43.5546
margin_top = -45.0
margin_right = 39.4454
margin_bottom = 41.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -36.0266, -0.405396 )
rotation = 1.5708
amount = 50
speed_scale = 2.0
local_coords = false
process_material = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[connection signal="timeout" from="TimerSpeed" to="." method="_on_TimerSpeed_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
